# rivaroxaban-model

./: .gitignore  .zenodo.json  Dockerfile  Dockerfile.md  README.md  mit.txt  pyproject.toml  rivaroxaban_model.omex
figures/: rivaroxaban_pharmacodynamics.newtp
models/: rivaroxaban_body.md  rivaroxaban_body.xml  rivaroxaban_body_flat.md  rivaroxaban_body_flat.xml  rivaroxaban_coagulation.md  rivaroxaban_intestine.md  rivaroxaban_intestine.xml  rivaroxaban_kidney.md  rivaroxaban_kidney.xml  rivaroxaban_liver.md  rivaroxaban_liver.xml
release-notes/: 0.1.0.md  0.1.1.md  0.7.0.md
simulation/: index.html
simulation/Alalawneh2024/: Alalawneh2024.html  Alalawneh2024.json  Alalawneh2024_aPTT_non-obese.tsv  Alalawneh2024_aPTT_obese.tsv  Alalawneh2024_prothrombin time_non-obese.tsv  Alalawneh2024_prothrombin time_obese.tsv  Alalawneh2024_rivaroxaban_excretion_urine_non-obese.tsv  Alalawneh2024_rivaroxaban_excretion_urine_obese.tsv  Alalawneh2024_rivaroxaban_non-obese2.tsv  Alalawneh2024_rivaroxaban_urine_non-obese.tsv  Alalawneh2024_rivaroxaban_urine_obese.tsv
simulation/Ding2020/: Ding2020.html  Ding2020.json  Ding2020_rivaroxaban_Fasting_R10.tsv  Ding2020_rivaroxaban_Fasting_T10.tsv  Ding2020_rivaroxaban_Fed_R10.tsv  Ding2020_rivaroxaban_Fed_T10.tsv
simulation/DoseDependencyExperiment/: DoseDependencyExperiment.html  DoseDependencyExperiment.json
simulation/Frost2014/: Frost2014.html  Frost2014.json  Frost2014_apixaban_mAPI.tsv  Frost2014_rivaroxaban_mRIV10.tsv
simulation/GenisNajera2022/: GenisNajera2022.html  GenisNajera2022.json  GenisNajera2022_rivaroxaban_R20.tsv  GenisNajera2022_rivaroxaban_T20.tsv
simulation/Graff2007/: Graff2007.html  Graff2007.json  Graff2007_factor Xa inhibition_PLACEBO.tsv  Graff2007_factor Xa inhibition_RIV_30.tsv  Graff2007_factor Xa inhibition_RIV_5.tsv  Graff2007_prothrombin time (change relative)_PLACEBO.tsv  Graff2007_prothrombin time (change relative)_RIV_30.tsv  Graff2007_prothrombin time (change relative)_RIV_5.tsv  Graff2007_rivaroxaban_RIV_30.tsv  Graff2007_rivaroxaban_RIV_5.tsv
simulation/Greenblatt2018/: Greenblatt2018.html  Greenblatt2018.json  Greenblatt2018_rivaroxaban_MRI.tsv  Greenblatt2018_rivaroxaban_MRI_VER.tsv  Greenblatt2018_rivaroxaban_NRF.tsv  (+5 more)
(+543 files in other folders)
